--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -12,8 +12,6 @@ body {
 
 h1 {
   font-size: 5rem;
-  display: block;
-  width: 800px;
 }
 
 footer {
@@ -22,18 +20,12 @@ footer {
   clear: both;
 }
 
-.logo {
-  display: inline-block;
-}
-
 div .left{
-  display: inline-block;
   float: left;
   width: 45%;
 }
 
 div .right {
-  display: inline-block;
   float: right;
   width: 45%;
 }
@@ -50,9 +42,52 @@ div .right {
   margin-right: 50px;
 }
 
-@media (orientation: landscape) and (max-width: 932px) {
-  .main {
-    width: 1rem;
-    height: 1rem;
+@media (max-width: 680px) {
+  .logo {
+    width: 100px;
+    height: auto;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
+  div .left {
+    display: block;
+    height: auto;
+    width: 100%;
+  }
+
+  div .right {
+    display: block;
+    height: auto;
+    width: 100%;
+  }
+  
+  p {
+    margin-bottom: 30px;
+  }
+
+  .left .tile-image {
+    width: 100%;
+    height: 200px;
+    display: block;
+    float: none;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+
+  .right .tile-image {
+    width: 100%;
+    height: 200px;
+    display: block;
+    float: none;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+
+  .card {
+    text-align: justify;
   }
 }
